fixed the layout of cards to wrap to the next line

--- a/style.css
+++ b/style.css
@@ -13,11 +13,16 @@ body {
   }
   
   .card {
-    width: 90%;
-    height: 200px;
-    border: 1px solid #ccc;
+    min-height: 15rem;
+    max-width: 30rem;
+    border: 1px solid #cd1414;
     padding: 10px;
     margin: 10px;
+  }
+  .paragraph, .title{
+    border: 1px solid #cd1414;
+    word-wrap: break-word;
+    
   }
   
   #controls {
@@ -34,10 +39,6 @@ body {
   #controls button {
     margin-right: 10px;
   }
-  .wrap-word {
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-}
   
 
 .Itenerary{
